sbin_PROGRAMS = nield
nield_SOURCES = \
	nield.h \
	list.h \
	rtnetlink.h \
	nield.c \
	log.c \
	debug.c \
	nlmsg.c \
	rta.c \
	ifimsg.c \
	ifimsg_brport.c \
	ifimsg_vlan.c \
	ifimsg_gre.c \
	ifimsg_macvlan.c \
	ifimsg_vxlan.c \
	ifimsg_bond.c \
	ndmsg.c \
	ifamsg.c \
	rtmsg.c \
	frhdr.c \
	tcmsg_qdisc.c \
	tcmsg_qdisc_cbq.c \
	tcmsg_qdisc_choke.c \
	tcmsg_qdisc_codel.c \
	tcmsg_qdisc_drr.c \
	tcmsg_qdisc_dsmark.c \
	tcmsg_qdisc_fifo.c \
	tcmsg_qdisc_fq_codel.c \
	tcmsg_qdisc_gred.c \
	tcmsg_qdisc_hfsc.c \
	tcmsg_qdisc_htb.c \
	tcmsg_qdisc_multiq.c \
	tcmsg_qdisc_netem.c \
	tcmsg_qdisc_plug.c \
	tcmsg_qdisc_prio.c \
	tcmsg_qdisc_qfq.c \
	tcmsg_qdisc_red.c \
	tcmsg_qdisc_sfb.c \
	tcmsg_qdisc_sfq.c \
	tcmsg_qdisc_tbf.c \
	tcmsg_filter.c \
	tcmsg_filter_basic.c \
	tcmsg_filter_cgroup.c \
	tcmsg_filter_flow.c \
	tcmsg_filter_fw.c \
	tcmsg_filter_route.c \
	tcmsg_filter_rsvp.c \
	tcmsg_filter_tcindex.c \
	tcmsg_filter_u32.c \
	tcamsg.c \
	tcamsg_csum.c \
	tcamsg_gact.c \
	tcamsg_mirred.c \
	tcamsg_nat.c \
	tcamsg_pedit.c \
	tcamsg_police.c \
	tcamsg_skbedit.c
